# genomeMaker

./: .gitignore  CMakeLists.txt  README.md
include/eadlib/cli/graphic/: ProgressBar.h  Throbber.h
include/eadlib/cli/parser/: Option.h  Parser.h
include/eadlib/io/: FileReader.h  FileStats.h  FileWriter.h
include/eadlib/logger/: Logger.h
include/eadlib/logger/log_configuration/: LogConfig.h  LogLevel_types.h  OutputConfiguration.h  TimeStamp.h
include/eadlib/logger/log_formatters/: Formatter.h  Formatter_Terminal.h  Formatter_types.h
include/eadlib/logger/log_outputs/: LogOutput.h  LogOutput_FileAppend.h  LogOutput_FileNew.h  LogOutput_FileOverwrite.h  LogOutput_Terminal.h  LogOutput_types.h
include/eadlib/math/: math.h
include/eadlib/tool/: Convert.h
src/: gmaker.cpp
src/cli/: cli.cpp  cli.h
src/containers/: Buffers.h  FileOptions.h
src/tools/: GenomeCreator.cpp  GenomeCreator.h  Randomiser.cpp  Randomiser.h  SequencerSim.cpp  SequencerSim.h
tests/: Creator_tests.cpp  MOCK_Randomiser.h  MOCK_Reader.h  MOCK_Writer.h  SequencerSim_Tests.h  main.cpp
